# chat-state

./: .gitignore  Cargo.toml  DESIGN.md  OpenCode.md  README.md  flake.nix  init-fs-mcp.json  init.json  manifest.toml  note.md  working.toml
.build_info/: build_info.json
.github/workflows/: release.yml
src/: anthropic_client.rs  bindings.rs  lib.rs  protocol.rs  proxy.rs  state.rs  utils.rs
wit/: actor.wit  message-server.wit  random.wit  store.wit  timing.wit  types.wit  world.wit
