[package]
name = "chat-state"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "colinrozzi:commit-actor"
target = "colinrozzi-wit:commit-actor/default@0.0.1"

[dependencies]
serde_json = "1.0"
wit-bindgen = "0.17.0"
genai-types = "0.4.2"
mcp-protocol = "0.2.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.wit-bindgen-rt]
features = ["bitflags"]
version = "0.39.0"
